--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "swr": "^2.1.2",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
