--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "material-ui-popup-state": "^5.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "swr": "^2.1.2",
