--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "swr": "^2.1.2",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
